# beauti-tex

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
src/beauti_tex/: __init__.py  cli.py  config.py  default.ini  projBuilder.py  proj_builder.py  utils.py
src/beauti_tex/templates/: main.tex  titlepage.tex
tests/: test_cli.py  test_config.py  test_proj_builder.py  test_utils.py
